@@ -40,6 +40,10 @@ $t->get_ok('/api/connections')->status_is(200)->json_is(
 $t->post_ok('/api/connection/irc-doesnotexist', json => {url => 'foo://example.com:9999'})
   ->status_is(404);
 $t->post_ok('/api/connection/irc-example', json => {})->status_is(200);
+
+$user->get_connection('irc-localhost')->state('connected');
+$t->post_ok('/api/connection/irc-localhost', json => {url => "irc://localhost:$port"})
+  ->status_is(200)->json_is('/name' => 'localhost')->json_is('/state' => 'connected');
 $t->post_ok('/api/connection/irc-localhost', json => {url => 'foo://example.com:9999'})
   ->status_is(200)->json_is('/name' => 'localhost')->json_is('/state' => 'queued')
   ->json_like('/url' => qr{irc://example.com:9999\?nick=superman});
